--- a/app/src/main/res/navigation/my_nav_graph.xml
+++ b/app/src/main/res/navigation/my_nav_graph.xml
@@ -80,19 +80,7 @@
             app:popUpTo="@id/showTheExpenseFragment"
             app:popUpToInclusive="true" />
         <argument
-            android:name="expenseID"
-            app:argType="integer"
-            android:defaultValue="0" />
-        <argument
-            android:name="billType"
-            app:argType="integer" />
-        <argument
-            android:name="statement"
-            app:argType="string"
-            android:defaultValue="Fatura" />
-        <argument
-            android:name="amountOfMoney"
-            android:defaultValue="0"
-            app:argType="integer" />
+            android:name="expense"
+            app:argType="com.cevlikalprn.harcamalarim.model.Expense" />
     </fragment>
 </navigation>
