--- a/app/src/main/res/navigation/my_nav_graph.xml
+++ b/app/src/main/res/navigation/my_nav_graph.xml
@@ -17,8 +17,8 @@
             android:id="@+id/action_homeFragment_to_addExpenseFragment"
             app:destination="@id/addExpenseFragment" />
         <action
-            android:id="@+id/action_homeFragment_to_showTheExpenseFragment"
-            app:destination="@id/showTheExpenseFragment" />
+            android:id="@+id/action_homeFragment_to_deleteExpenseFragment"
+            app:destination="@id/deleteExpenseFragment" />
     </fragment>
     <fragment
         android:id="@+id/changeUserInfoFragment"
@@ -70,14 +70,14 @@
             app:popUpToInclusive="true" />
     </fragment>
     <fragment
-        android:id="@+id/showTheExpenseFragment"
-        android:name="com.cevlikalprn.harcamalarim.view.fragments.ShowTheExpenseFragment"
-        android:label="fragment_show_the_expense"
-        tools:layout="@layout/fragment_show_the_expense" >
+        android:id="@+id/deleteExpenseFragment"
+        android:name="com.cevlikalprn.harcamalarim.view.fragments.DeleteExpenseFragment"
+        android:label="fragment_delete_expense"
+        tools:layout="@layout/fragment_delete_expense" >
         <action
-            android:id="@+id/action_showTheExpenseFragment_to_homeFragment"
+            android:id="@+id/action_deleteExpenseFragment_to_homeFragment"
             app:destination="@id/homeFragment"
-            app:popUpTo="@id/showTheExpenseFragment"
+            app:popUpTo="@id/deleteExpenseFragment"
             app:popUpToInclusive="true" />
         <argument
             android:name="expense"
