--- a/app/src/main/res/layout/fragment_delete_expense.xml
+++ b/app/src/main/res/layout/fragment_delete_expense.xml
@@ -48,6 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
+        android:textColor="@color/white"
         android:text="@string/delete"
         app:cornerRadius="30dp"
         app:layout_constraintEnd_toEndOf="parent"
